# opengl-exploration

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: shader.fs
src/: glad.c  input.c  rectangle.c  shader.c  shader.h  textures.c  threed.c  triangle.c
